--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
     <link rel="stylesheet" href="css/index.css" media="screen">
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" media="screen" title="no title">
     <script language="Javascript"  type="text/javascript" src="js/clockCountdown.js"></script>
-    <script src="js/index.js"></script>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <title>www.trabajaweb.info</title>
+    <script type="text/javascript">
+      window.onload = function (){
+        r = new clockCountdown('clock',{'days':2,'hours':10,'minutes':18,'seconds':35});
+      }
+    </script>
   </head>
   <body>
     <section class="container-fluid" id="first-part">
